--- a/config.json
+++ b/config.json
@@ -1,9 +1,5 @@
 {
     "TOKEN": "BOT_TOKEN_HERE",
     "CHANNEL": 1, 
-    "ALLOWED_USER_IDS": [
-        1, 
-        2, 
-        3 
-    ]  
+    "ALLOWED_USER_ID": 1
 }
